Updated README file

--- a/README
+++ b/README
@@ -1,2 +1,28 @@
-To work with this project - you need to download stanfornd's corenlp library file,
-and unzip it in this project's directory
+# Web Novels Text Analyzer
+
+This is a project we made for our course "Digital Humanities"
+
+## Installation
+Download CoreNLP by Stanford University
+```bash
+wget http://nlp.stanford.edu/software/stanford-corenlp-full-2018-10-05.zip
+```
+Unzip the file inside the project's folder
+```bash
+unzip stanford-corenlp-full-2018-10-05.zip
+```
+
+
+## Usage
+
+```python
+TODO
+```
+
+## Contributing
+Pull requests are welcome. For major changes, please open an issue first to discuss what you would like to change.
+
+Please make sure to update tests as appropriate.
+
+## License
+[MIT](https://choosealicense.com/licenses/mit/)
